WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297794
[JSC] Fix exception scope handling in llint_check_stack_and_vm_traps
https://bugs.webkit.org/show_bug.cgi?id=297794
Summary
[JSC] Fix exception scope handling in llint_check_stack_and_vm_traps
Yijia Huang
Reported
2025-08-22 11:15:49 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-22 11:16:05 PDT
<
rdar://problem/158958322
>
Yijia Huang
Comment 2
2025-08-22 11:29:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49778
EWS
Comment 3
2025-08-25 10:28:34 PDT
Committed
299116@main
(0693d90fa798): <
https://commits.webkit.org/299116@main
> Reviewed commits have been landed. Closing PR #49778 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug