Source/JavaScriptCore/llint/LLIntSlowPaths.cpp
@@ -562,11 +562,12 @@ UGPRPair SYSV_ABI llint_check_stack_and_vm_traps(CallFrame* callFrame, const JSI
 
     if (vm.traps().handleTrapsIfNeeded()) {
         if (vm.hasPendingTerminationException()) {
+            throwScope.release();
             pc = returnToThrow(vm);
             LLINT_RETURN_TWO(pc, callFrame);
         }
-        ASSERT(!vm.exceptionForInspection());
     }
+    throwScope.assertNoException();
 
     // Redo stack check because we may really have gotten here due to an imminent StackOverflow.
     bool imminentOverflowDetected = false;
